# application_service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
application/: crud.py  database.py  kafka_publisher.py  main.py  models.py  routes.py  schemas.py
tests/: 123.py  test_applications.py
